


[project]
name = "referrers"
version = "0.12.0"
description = "Finds the graph of referrers for a Python object"
authors = ["Neil Ferguson"]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "networkx>=2.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1"
]



[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
