[project]
name = "referrers"
version = "0.11.1"
description = "Finds the graph of referrers for a Python object"
authors = [{ name = "Neil Ferguson" }]
requires-python = ">=3.8"
readme = "README.md"
license = "Apache-2.0"
dependencies = ["networkx>=2.4"]

[project.urls]
Repository = "https://github.com/nfergu/referrers"

[dependency-groups]
dev = ["pytest>=8.1.1,<9"]
