[tool.poetry]
name = "referrers"
version = "0.14.2"
description = "Finds the graph of referrers for a Python object"
authors = ["Neil Ferguson"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nfergu/referrers"

[tool.poetry.dependencies]
python = ">=3.9"
networkx = ">=2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
